<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_title_save"
          android:id="@+id/item_menu_save"
          app:showAsAction="always"
    />
</menu>